* Fixed annoying behavior that if clicking (selecting) a synopsis some distance down inside an index card, the card would scroll back to the top so that the selected synopsis disappeared out of view.
* Fixed a bug whereby moving a synopsis out of a (then empty) section could cause the section to become a synopsis. 
* Other minor bug fixes.

OTHER STUFF:

* Minor fixes to UI colors
* Minor changes to names of menus and menu commands
* Spent some time in the sun. That was nice.

A GENERAL NOTE:

This version of FTOutliner makes use of the :(has) CSS selector, which means that some visual components will look better if you have upgraded Safari to version 15.4 or later. Safari 15.4 is available for MacOS Catalina or later. Do it if you can.


v 1.42 (June 9, 2022)
======================

The post-release, how-did-I-not-notice-that update:

BUG FIXES:

* Fixed a bug that if the first section element was not a one-hashtag #ACT, every new section would start its own column until an #ACT was encountered
* Fixed logic that incorrectly prevented dragging scenes or sequences into acts before the beginning of its first following lower-level section.
* Added logic to prevent entire #acts from being dragged into the boneyard, since this would in effect convert the boneyard into a normal act.
* Fixed a bug whereby some screenplay text might under certain circumstances be included in a bug report.
* Fixed a bug whereby using the ADD button to add a section at the absolute end of a document might cause Beat to freeze
* Removed shortcut from the Force Restart menu item. It was never supposed be easily triggered (and also used a very local character, so frustrating for most people anyway had they wanted to)

OTHER STUFF:

* Added Version History menu item. You probably know, that's probably how you're reading this right now.


v 1.41 (May 24, 2022)
======================
